Concluded exercises from part II

--- a/bloco_3/dia_1/exercises.html
+++ b/bloco_3/dia_1/exercises.html
@@ -11,5 +11,21 @@
  - Adicione uma imagem que venha de uma URL externa.
  - Adicione uma imagem que está no seu computador, local
     -->
+    <h2>Amizades da Trybe</h2>
+    <ul>
+      <li>Alberto Candido</li>
+      <li>Gabi Azevedo</li>
+      <li>Gabriel Fernandes</li>
+      <li>Hugo Mouto</li>
+      <li>Hugo Somers</li>
+      <li>Luiz Ney</li>
+      <li>Matheus Inacio</li>
+      <li>Oryange Strifezze (Sundari)</li>
+      <li>Rogério Martins (Roge) </li>
+    </ul>
+    <h2>Imagem Externa</h2>
+    <img src="https://emoji.slack-edge.com/TMDDFEPFU/meow_party/e1bf0dce74c00454.gif" alt="Gif do gatinho colorido dançando.">
+    <h2>Imagem Local</h2>
+    <img src="meu-bolo-de-cenoura.jpeg" alt="Bolo de cenoura com cobertura de brigadeiro cortado." width="450px">
   </body>
 </html>
