--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -3,22 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style></style>
+    <!-- Exercícios
+    - Modifique o tamanho do h1 para 65 pixels
+    - Modifique a cor do texto do h1 para laranja
+    - Modifique a cor de fundo da lista não ordenada
+  -  Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
+    -->
+    <style>
+
+      h1 {
+        font-size: 65px;
+        color: orange; 
+      }
+
+      ul {
+        background-color: wheat;
+      }
+
+      .change-bg-color {
+        background-color: lightgray;
+      }
+
+    </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="change-bg-color">Qual é a sua cor favorita?</p>
+    <ul class="change-bg-color">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
     </ul>
-
-    <!-- Exercícios
- - Modifique o tamanho do h1 para 65 pixels
- - Modifique a cor do texto do h1 para laranja
- - Modifique a cor de fundo da lista não ordenada
- - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
-    -->
   </body>
 </html>
