Add friend Carol Rodrigues to friends list and create a paragraph for her

--- a/bloco_3/dia_1/exercises.html
+++ b/bloco_3/dia_1/exercises.html
@@ -17,6 +17,7 @@
 
     <ul>
       <li><a href="#paragrafo-alberto">Alberto Candido</a></li>
+      <li><a href="#paragrafo-carol">Carol Rodrigues</a></li>
       <li><a href="#paragrafo-gabi">Gabi Azevedo</a></li>
       <li><a href="#paragrafo-gabriel">Gabriel Fernandes</a></li>
       <li><a href="#paragrafo-mouto">Hugo Mouto</a></li>
@@ -26,7 +27,7 @@
       <li><a href="#paragrafo-sun">Oryange Strifezze (Sundari)</a></li>
       <li><a href="#paragrafo-roge">Rogério Martins (Roge)</a></li>
     </ul>
-
+    
     <h3>Imagem Externa</h3>
     <img src="https://emoji.slack-edge.com/TMDDFEPFU/meow_party/e1bf0dce74c00454.gif" alt="Gif do gatinho colorido dançando.">
 
@@ -44,6 +45,9 @@
 
     <h4 id="paragrafo-alberto">Alberto Candido</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dapibus vel justo eu vulputate. Suspendisse interdum elementum mauris, id posuere ex vulputate non. Proin sed nibh dictum, eleifend orci sit amet, eleifend est. Quisque interdum ut arcu mollis malesuada. Proin porttitor massa a lobortis convallis. Morbi sit amet tristique metus, ut accumsan felis. Vivamus imperdiet rutrum sapien et rutrum. Mauris sed tortor nunc. In hac habitasse platea dictumst. Etiam gravida augue at arcu commodo gravida. Nullam nec quam convallis, gravida nisl eu, lobortis erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eget magna et lectus condimentum venenatis et id enim.</p>
+
+    <h4 id="paragrafo-carol">Carol Rodrigues</h4>
+    <p>Ut ullamcorper posuere finibus. Donec neque ipsum, faucibus eu vulputate ac, auctor quis turpis. Mauris elementum tellus vitae tortor malesuada, sed egestas eros aliquet. Aenean et lectus vitae leo interdum luctus at facilisis justo. Proin ac cursus purus. Nullam sit amet est non massa tempor rhoncus vitae in dui. Donec in erat ligula. Maecenas sodales dapibus lectus, vel aliquam erat condimentum et. Etiam gravida augue at ipsum pulvinar, quis ultricies purus dignissim. Ut pellentesque lorem a nibh mattis, ut pulvinar tortor viverra. Pellentesque nec gravida augue, et tincidunt tellus. In quis vulputate nibh, posuere mattis nisl. Nulla sed eleifend arcu. Sed dignissim nec quam in fermentum. Proin erat turpis, pretium vel tortor vehicula, placerat venenatis dolor.</p>
 
     <h4 id="paragrafo-gabi">Gabi Azevedo</h4>
     <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut pulvinar, ligula non mollis tristique, sapien orci pharetra nulla, pellentesque consequat massa augue id diam. Mauris eget dui malesuada, pharetra diam ac, varius lacus. Nulla elementum ac libero a interdum. Phasellus consectetur consectetur sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus tempus vestibulum ante vel volutpat.</p>
