--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -28,6 +28,10 @@
         color: orange; 
       }
 
+      p {
+        font-weight: 600;
+      }
+
       ul {
         background-color: wheat;
       }
