--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -28,16 +28,20 @@
       h1 {
         font-size: 65px;
         font-family: sans-serif;
-        color: orange; 
+        color: orange;
+        text-align: center;
+        text-decoration: underline; 
       }
 
       p {
         font-weight: 600;
         font-size: 3em;
+        line-height: 1;
       }
 
       ul {
         background-color: wheat;
+        font-style: italic;
       }
 
       .change-bg-color {
