Complete final requirement from exercises part II and conclude part II

--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -48,6 +48,10 @@
         background-color: lightgray;
       }
 
+      li {
+        background-color: black;
+      }
+
     </style>
   </head>
   <body>
