--- a/bloco_3/dia_4/mantis-shrimp/index.html
+++ b/bloco_3/dia_4/mantis-shrimp/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Meet the Mantis Shrimp</title>
+  <title>50mph Punch: Meet the Mantis Shrimp</title>
 </head>
 <body>
-  
+  <header>50mph Punch: Meet the Mantis Shrimp</header>
 </body>
 </html>
