Fix header: add h1 to wrap the page title

--- a/bloco_3/dia_4/mantis-shrimp/index.html
+++ b/bloco_3/dia_4/mantis-shrimp/index.html
@@ -8,7 +8,9 @@
   <title>50mph Punch: Meet the Mantis Shrimp</title>
 </head>
 <body>
-  <header>50mph Punch: Meet the Mantis Shrimp</header>
+  <header>
+    <h1>50mph Punch: Meet the Mantis Shrimp</h1>
+  </header>
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
