Finish step 6: add main section, article and article heading

--- a/bloco_3/dia_4/mantis-shrimp/index.html
+++ b/bloco_3/dia_4/mantis-shrimp/index.html
@@ -18,5 +18,10 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
+  <main>
+    <article>
+      <h2>Facts About the Mantis Shrimp</h2>
+    </article>
+  </main>
 </body>
 </html>
