--- a/bloco_3/dia_4/mantis-shrimp/index.html
+++ b/bloco_3/dia_4/mantis-shrimp/index.html
@@ -26,6 +26,44 @@
         <p>
           Mantis shrimp, or stomatopods, are carnivorous marine crustaceans of the order Stomatopoda, branching from other members of the class Malacostraca around 340 million years ago. Mantis shrimps typically grow to around 10 cm (3.9 in) in length, while a few can reach up to 38 cm (15 in). The largest mantis shrimp ever caught had a length of 46 cm (18 in); it was caught in the Indian River near Fort Pierce, Florida, in the United States. A mantis shrimp's carapace (the hard, thick shell that covers crustaceans and some other species) covers only the rear part of the head and the first four segments of the thorax. Varieties range in color from shades of brown to vivid colors, with more than 450 species of mantis shrimps being known. They are among the most important predators in many shallow, tropical and subtropical marine habitats. However, despite being common, they are poorly understood, as many species spend most of their lives tucked away in burrows and holes.
         </p>
+        <table>
+          <caption>Scientific classification of the Mantis shrimp</caption>
+          <thead>
+            <tr>
+              <th colspan="2" scope="col">Mantis shrimp</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Scientific name</th>
+              <td><em>Odontodactylus scyllarus</em></td>
+            </tr>
+            <tr>
+              <th scope="row">Kingdom</th>
+              <td>Animalia</td>
+            </tr>
+            <tr>
+              <th scope="row">Phylum</th>
+              <td>Arthropoda</td>
+            </tr>
+            <tr>
+              <th scope="row">Subphylum</th>
+              <td>Crustacea</td>
+            </tr>
+            <tr>
+              <th scope="row">Class</th>
+              <td>Malacostraca</td>
+            </tr>
+            <tr>
+              <th scope="row">Subclass</th>
+              <td>Hoplocarida</td>
+            </tr>
+            <tr>
+              <th scope="row">Order</th>
+              <td>Stomatopoda</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
     </article>
   </main>
