--- a/bloco_3/dia_4/mantis-shrimp/index.html
+++ b/bloco_3/dia_4/mantis-shrimp/index.html
@@ -26,6 +26,7 @@
         <p>
           Mantis shrimp, or stomatopods, are carnivorous marine crustaceans of the order Stomatopoda, branching from other members of the class Malacostraca around 340 million years ago. Mantis shrimps typically grow to around 10 cm (3.9 in) in length, while a few can reach up to 38 cm (15 in). The largest mantis shrimp ever caught had a length of 46 cm (18 in); it was caught in the Indian River near Fort Pierce, Florida, in the United States. A mantis shrimp's carapace (the hard, thick shell that covers crustaceans and some other species) covers only the rear part of the head and the first four segments of the thorax. Varieties range in color from shades of brown to vivid colors, with more than 450 species of mantis shrimps being known. They are among the most important predators in many shallow, tropical and subtropical marine habitats. However, despite being common, they are poorly understood, as many species spend most of their lives tucked away in burrows and holes.
         </p>
+
         <table>
           <caption>Scientific classification of the Mantis shrimp</caption>
           <thead>
@@ -64,6 +65,39 @@
             </tr>
           </tbody>
         </table>
+      </section>
+
+      <section>
+        <h3>Interesting facts</h3>
+        <section>
+          <h4>A fierce predator</h4>
+          <p>
+            The mantis shrimp has two raptorial appendages on the front of its body. These accelerate with the same velocity as a gunshot from a twenty-two caliber rifle, and in less than three-thousandths of a second can strike prey with <strong>1,500 Newtons</strong> of force.
+          </p>
+          <p>
+            To put this in perspective, if human beings could accelerate our arms at <strong>1/10th</strong> that speed, we'd be able to throw a baseball into <strong>orbit</strong>.
+          </p>
+        </section>
+
+        <section>
+          <h4>Why so fast?</h4>
+          <p>
+            Their limbs move so quickly the water around them <strong>boils</strong> in a process known as <em>supercavitation</em>.
+          </p>
+          <p>
+            When these cavitation bubbles collapse it produces an <strong>undersea shockwave</strong> that can kill prey even if the mantis shrimp misses its target.
+          </p>
+          <p>
+            The force of these collapsing bubbles also produces temperatures in the range of several thousand Kelvins and emits <strong>tiny bursts of light</strong>. This effect is called <em>sonoluminescence</em>.
+          </p>
+        </section>
+
+        <section>
+          <h4>You're not welcome here</h4>
+          <p>
+            Aquariums don't typically house mantis shrimps because they tend to slaughter every other creature they share a tank with. And also because <strong>they can break aquarium glass.</strong>
+          </p>
+        </section>
       </section>
     </article>
   </main>
