--- a/bloco_5/dia_1/index.html
+++ b/bloco_5/dia_1/index.html
@@ -39,23 +39,27 @@
       </div>
     </div>
     <script>
-        /*
-        Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
-        - document.getElementById()
-        - document.getElementsByClassName()
-        - document.getElementsByTagName()
-        Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
-        Crie uma função que mude a cor do quadrado vermelho para branco.
-        Crie uma função que corrija o texto da tag <h1>.
-          Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
-            Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-              */
-       /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
-        function changeText() {
-          let paragraph = document.querySelectorAll('.center-content p')[1];
-          paragraph.innerHTML = 'Daqui a 2 anos me vejo atuando no mercado de desenvolvimento de software dentro de uma grande startup de tecnologia cujo produto gere muito impacto social positivo e que esteja sediada preferencialmente fora do Brasil, possibilitando assim que eu possa migrar para este outro país e estabelecer residência nele.';
-        }
-        changeText();
-    </script>
+      /*
+      Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
+      - document.getElementById()
+      - document.getElementsByClassName()
+      - document.getElementsByTagName()
+      Crie uma função que corrija o texto da tag <h1>.
+        Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+          Crie uma função que exiba o conteúdo de todas as tags <p> no console.
+            */
+           /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
+            function changeText() {
+              let paragraph = document.querySelectorAll('.center-content p')[1];
+              paragraph.innerHTML = 'Daqui a 2 anos me vejo atuando no mercado de desenvolvimento de software dentro de uma grande startup de tecnologia cujo produto gere muito impacto social positivo e que esteja sediada preferencialmente fora do Brasil, possibilitando assim que eu possa migrar para este outro país e estabelecer residência nele.';
+            }
+            /* Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).*/
+            function changeBgColor() {
+              document.querySelector('.main-content').style.backgroundColor = 'rgb(76,164,109)';
+            }
+            /* Crie uma função que mude a cor do quadrado vermelho para branco. */
+            changeText();
+            changeBgColor();
+            </script>
   </body>
-</html>
+  </html>
