--- a/bloco_5/dia_1/index.html
+++ b/bloco_5/dia_1/index.html
@@ -48,18 +48,22 @@
         Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
           Crie uma função que exiba o conteúdo de todas as tags <p> no console.
             */
-           /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
-            function changeText() {
-              let paragraph = document.querySelectorAll('.center-content p')[1];
-              paragraph.innerHTML = 'Daqui a 2 anos me vejo atuando no mercado de desenvolvimento de software dentro de uma grande startup de tecnologia cujo produto gere muito impacto social positivo e que esteja sediada preferencialmente fora do Brasil, possibilitando assim que eu possa migrar para este outro país e estabelecer residência nele.';
-            }
-            /* Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).*/
-            function changeBgColor() {
-              document.querySelector('.main-content').style.backgroundColor = 'rgb(76,164,109)';
-            }
-            /* Crie uma função que mude a cor do quadrado vermelho para branco. */
-            changeText();
-            changeBgColor();
-            </script>
+      /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
+      function changeText() {
+        let paragraph = document.querySelectorAll('.center-content p')[1];
+        paragraph.innerHTML = 'Daqui a 2 anos me vejo atuando no mercado de desenvolvimento de software dentro de uma grande startup de tecnologia cujo produto gere muito impacto social positivo e que esteja sediada preferencialmente fora do Brasil, possibilitando assim que eu possa migrar para este outro país e estabelecer residência nele.';
+      }
+      /* Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).*/
+      function changeMainContentBgColor() {
+        document.querySelector('.main-content').style.backgroundColor = 'rgb(76,164,109)';
+      }
+      /* Crie uma função que mude a cor do quadrado vermelho para branco. */
+      function changeCenterContentBgColor() {
+        document.querySelector('.main-content .center-content').style.backgroundColor = 'white';
+      }
+      changeText();
+      changeMainContentBgColor();
+      changeCenterContentBgColor();
+    </script>
   </body>
   </html>
