--- a/bloco_5/dia_1/index.html
+++ b/bloco_5/dia_1/index.html
@@ -44,10 +44,8 @@
       - document.getElementById()
       - document.getElementsByClassName()
       - document.getElementsByTagName()
-      Crie uma função que corrija o texto da tag <h1>.
-        Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
-          Crie uma função que exiba o conteúdo de todas as tags <p> no console.
-            */
+      Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+      Crie uma função que exiba o conteúdo de todas as tags <p> no console.*/
       /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
       function changeText() {
         let paragraph = document.querySelectorAll('.center-content p')[1];
@@ -61,9 +59,15 @@
       function changeCenterContentBgColor() {
         document.querySelector('.main-content .center-content').style.backgroundColor = 'white';
       }
+      /* Crie uma função que corrija o texto da tag <h1>. */
+      function fixText() {
+        let element = document.querySelector('.title');
+        element.innerText = element.innerText.replace(/(?<=Java).*$/, 'Script');
+      }
       changeText();
       changeMainContentBgColor();
       changeCenterContentBgColor();
-    </script>
+      fixText();
+      </script>
   </body>
   </html>
