--- a/bloco_5/dia_1/index.html
+++ b/bloco_5/dia_1/index.html
@@ -44,7 +44,6 @@
       - document.getElementById()
       - document.getElementsByClassName()
       - document.getElementsByTagName()
-      Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
       Crie uma função que exiba o conteúdo de todas as tags <p> no console.*/
       /*Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)*/
       function changeText() {
@@ -64,10 +63,18 @@
         let element = document.querySelector('.title');
         element.innerText = element.innerText.replace(/(?<=Java).*$/, 'Script');
       }
+      /* Crie uma função que modifique todo o texto da tag <p> para maiúsculo. */
+      function textToUpperCase() {
+        let paragraphs = document.getElementsByTagName('p');
+        for (let paragraph of paragraphs) {
+          paragraph.style.textTransform = 'uppercase';
+        }
+      }
       changeText();
       changeMainContentBgColor();
       changeCenterContentBgColor();
       fixText();
+      textToUpperCase();
       </script>
   </body>
   </html>
