--- a/bloco_5/dia_2/index.html
+++ b/bloco_5/dia_2/index.html
@@ -60,8 +60,12 @@
       // 1. Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body
       let pageTitle = document.createElement('h1');
       pageTitle.innerText = 'Exercício 5.2 - JavaScript DOM';
+      pageTitle.id = 'page-title';
       document.body.prepend(pageTitle);
-      
+      // 2. Adicione a tag div com a classe main-content como filho da tag body
+      let mainContent = document.createElement('div');
+      mainContent.className = 'main-content';
+      document.getElementById('page-title').insertAdjacentElement('afterend', mainContent);
     </script>
   </body>
 </html>
