--- a/bloco_5/dia_2/index.html
+++ b/bloco_5/dia_2/index.html
@@ -62,14 +62,21 @@
       pageTitle.innerText = 'Exercício 5.2 - JavaScript DOM';
       pageTitle.id = 'page-title';
       document.body.prepend(pageTitle);
+
       // 2. Adicione a tag div com a classe main-content como filho da tag body
       let mainContent = document.createElement('div');
       mainContent.className = 'main-content';
       document.getElementById('page-title').insertAdjacentElement('afterend', mainContent);
+
       // 3. Adicione a tag div com a classe center-content como filho da tag div criada no passo 2
       let centerContent = document.createElement('div');
       centerContent.className  = 'center-content';
       document.querySelector('.main-content').appendChild(centerContent);
+
+      // 4. Adicione a tag p como filho do div criado no passo 3 e coloque algum texto
+      let paragraph = document.createElement('p');
+      paragraph.innerText = 'Na quinta parte da aula sobre JavaScript , você aprenderá a adicionar e remover tags de uma página. Além disso, aprenderá mais uma forma de buscar os elementos da página.';
+      document.querySelector('.center-content').appendChild(paragraph);
     </script>
   </body>
 </html>
