--- a/bloco_5/dia_2/index.html
+++ b/bloco_5/dia_2/index.html
@@ -82,6 +82,12 @@
       let leftContent = document.createElement('div');
       leftContent.className = 'left-content';
       document.querySelector('.main-content').prepend(leftContent);
+
+      // 6. Adicione a tag div com a classe right-content como filho da tag div criada no passo 2
+      let rightContent = document.createElement('div');
+      rightContent.className = 'right-content';
+      document.querySelector('.main-content').appendChild(rightContent);
+
     </script>
   </body>
 </html>
