--- a/bloco_5/dia_2/index.html
+++ b/bloco_5/dia_2/index.html
@@ -125,6 +125,9 @@
       leftContent = document.querySelector('.left-content');
       document.querySelector('.main-content').removeChild(leftContent);
 
+      // 13. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div.
+      document.querySelector('.right-content').style.marginRight = 'auto';
+
     </script>
   </body>
 </html>
