--- a/bloco_5/dia_2/index.html
+++ b/bloco_5/dia_2/index.html
@@ -131,6 +131,13 @@
       // 14. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde.
       document.querySelector('.main-content').style.backgroundColor = 'green';
 
+      // 15. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+      rightContentList = document.querySelector('.right-content ul');
+      let lastItem = rightContentList.lastChild;
+      let beforeLastItem = lastItem.previousSibling;
+      lastItem.remove();
+      beforeLastItem.remove();
+
     </script>
   </body>
 </html>
