Finish bonus exercise

--- a/bloco5/dia3/calendar/index.html
+++ b/bloco5/dia3/calendar/index.html
@@ -29,6 +29,8 @@
       </div>
       <div class="input-container">
         <h3>COMPROMISSOS</h3>
+        <ul id="appointments">
+        </ul>
         <label for="task-input">Novo:</label>
         <input type="text"
           id="task-input"
