--- a/bloco5/dia4/index.html
+++ b/bloco5/dia4/index.html
@@ -9,14 +9,14 @@
   <title>Exercises 5.4 - E-reader</title>
 </head>
 <body>
-  <div id="site-container">
-    <header>
-      <h1>Bispo's E-reader</h1>
-    </header>
+  <header class="header-container">
+    <h1 class="page-title">Bispo's E-reader</h1>
+  </header>
+  <div class="site-container">
     <aside id="preferences-container">
       <h3>Preferences</h3>
     </aside>
-    <main id="reader-container">
+    <main class="reader-container">
       <h3>Lorem Ipsum</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris molestie venenatis iaculis. Aliquam ut ipsum at nisi elementum iaculis eu et libero. Duis tristique porta vestibulum. Cras et vulputate sem. Integer bibendum, turpis et lobortis ultricies, mauris justo dictum magna, id elementum leo orci non ligula. Ut et turpis ut leo condimentum lacinia eu et turpis. Nullam et tortor hendrerit, convallis risus et, posuere tortor. Maecenas sapien eros, porta at viverra sed, tincidunt et neque. Suspendisse consequat, velit at tincidunt accumsan, velit ante convallis nisl, eu ultricies dolor turpis ut nunc. Nam blandit eu lacus vel egestas.
@@ -28,9 +28,9 @@
         Maecenas sed nunc at est eleifend pellentesque vel tempor diam. Ut quam ligula, tempus a posuere nec, finibus non magna. Maecenas tristique arcu ligula, vitae suscipit dolor blandit at. Pellentesque eu consequat leo. Quisque sagittis massa non velit viverra, vel elementum magna lacinia. Phasellus condimentum commodo velit et scelerisque. Proin et sollicitudin metus. Praesent semper, mauris semper suscipit ultricies, ligula diam congue lacus, vel ultricies arcu tortor vel quam. Phasellus vehicula, sapien id sodales congue, leo ipsum commodo sapien, vitae sagittis massa erat non urna. Duis et tellus vitae neque vestibulum faucibus ut ac erat. Vestibulum convallis scelerisque lorem, a porta justo feugiat ac. Vestibulum tristique suscipit leo eget viverra.
       </p>
     </main>
-    <footer>
-      Made by <a href='https://renatosbispo.github.io/' target='_blank'>Renato Bispo</a>
-    </footer>
   </div>
+  <footer class='footer-container'>
+    Made by <a href='https://renatosbispo.github.io/' target='_blank'>Renato Bispo</a>
+  </footer>
 </body>
 </html>
