Add color input preferences (HTML only, no functionality)

--- a/bloco5/dia4/index.html
+++ b/bloco5/dia4/index.html
@@ -13,8 +13,12 @@
     <h1 class="page-title">Bispo's E-reader</h1>
   </header>
   <div class="site-container">
-    <aside id="preferences-container">
-      <h3>Preferences</h3>
+    <aside class="preferences-container">
+      <h3 class="section-title">Preferences</h3>
+      <ul class="preferences">
+        <li><label for="color-selection">Text Color: </label><input id="color-selection" type='color'></li>
+        <li><label for="background-color-selection">Background Color: </label><input id="background-color-selection" type='color'></li>
+      </ul>
     </aside>
     <main class="reader-container">
       <h3>Lorem Ipsum</h3>
