--- a/bloco6/dia2/resume-form/index.html
+++ b/bloco6/dia2/resume-form/index.html
@@ -24,7 +24,7 @@
             <!-- Name field -->
             <div class="mb-3">
               <label for="name" class="form-label">Nome:</label>
-              <input type="text" name="name" id="name" maxlength="40" class="form-control" required>
+              <input type="text" name="name" id="name" class="form-control" data-validate-field="name" maxlength="40" required>
             </div>
             <!-- E-mail field -->
             <div class="mb-3">
@@ -94,13 +94,14 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
   <script>
       var picker = new Pikaday({
           field: document.getElementById('start-date'),
           format: 'DD/MM/YYYY',
       });
   </script>
+  <script src="../node_modules/just-validate/dist/js/just-validate.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
